--- a/CSS/background.html
+++ b/CSS/background.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body {
+        /* background-image: url(./images/86687a28d07e17f3bc3e10467a102b88.jpg); */
+        /* background-color: whitesmoke; */
+      }
       .demo {
-        height: 300px;
+        height: 500px;
         width: 500px;
         /* background-color: aliceblue; */
         /* background-color: rgb(255, 0, 255); */
         /* background-color: hsl(200, 20%, 25%); */
         /* background-color: #00ffee; */
         /* background-color: #abc; */
-        background-color: rgba(116, 55, 55, 0.6);
+        /* background-color: rgba(116, 55, 55, 0.6); */
         /* background-color: hsla(200, 20%, 25%, 50%); */
         /* background-color: #0fa8; */
         /* background-color: #00ffaf88; */
@@ -37,17 +41,105 @@
           aqua,
           rgb(120, 120, 240, 50%) 
         ); */
-        border-radius: 50%;
+        /* border-radius: 50%;
         background-image: repeating-radial-gradient(
           200px at 50% 50%,
-          red 50%,
+          red,
           yellow 50%,
           blue
-        );
+        ); */
+
+        background-image: url(./images/Web_of_Spider-Man_Vol_1_129-1.png);
+        /* background-size: 100% 100%; */
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+        margin: 100px auto;
+        border: 3px solid gray;
+        /* box shadow - x-distance y-distance blur spread color */
+        /* box-shadow: 90px 60px 55px 50px green; */
+        box-shadow: 0px 0px 20px 10px yellow, inset 10px 10px red,
+          10px 10px 10px 10px black;
+
+        font-size: 80px;
+        color: greenyellow;
+        text-align: center;
+        font-weight: bold;
+        padding: 20px;
+        text-shadow: 10px 10px 15px red;
+      }
+      .demo2 {
+        height: 300px;
+        width: 400px;
+        background-image: url(./images/web-design-technology-browsing-programming-concept_53876-163260.avif);
+        /* background-size: 100% 100%; */
+        background-size: cover;
+        /* background-repeat: no-repeat; */
+        /* background-position: top; */
+        background-position: bottom;
+        background-attachment: fixed;
+        box-shadow: 0 -50px 0 -5px black;
       }
     </style>
   </head>
   <body>
-    <div class="demo"></div>
+    <div class="demo">HELLO WORLD</div>
+    <div class="demo2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+      cupiditate praesentium repellat tempore maxime iusto voluptas beatae illum
+      aperiam provident nesciunt amet recusandae assumenda id autem sunt, totam
+      dolorum. Nesciunt inventore at corrupti officiis dolor perspiciatis ea.
+      Dolore corrupti sint voluptatum pariatur distinctio facere ab libero
+      voluptatibus mollitia adipisci illo debitis ipsam magni laudantium nemo,
+      reprehenderit repellendus illum consequuntur, rem itaque fugiat incidunt
+      doloribus vero. Eaque temporibus quas ea repellendus, cumque enim,
+      pariatur dicta vel vero possimus maxime nihil mollitia. Natus fugiat
+      voluptates ad deleniti amet deserunt. Tenetur facilis tempora labore
+      perspiciatis quo possimus, aut doloremque laborum temporibus dolores?
+      Laborum commodi perferendis maxime. Totam voluptates aperiam id corporis
+      fuga consequatur tempora eligendi cupiditate expedita quisquam rem
+      explicabo porro facilis, illo sapiente quam reprehenderit! Aliquam et
+      dolorem earum assumenda, harum fuga ut error iure. Laboriosam omnis ipsa,
+      optio earum provident error vitae, debitis, necessitatibus sequi natus
+      incidunt cum! Expedita neque maiores eligendi repellat maxime eum eius
+      molestiae, non, impedit laborum hic sit quidem libero facilis aut dolores
+      aspernatur quos sunt. Rem, soluta sunt. Recusandae praesentium voluptatum
+      quas repudiandae, consequuntur maxime, necessitatibus natus quam beatae
+      aliquam cum quae dolorum voluptate suscipit temporibus odio quis,
+      laudantium veniam repellat nesciunt. Est velit id voluptates quam, autem
+      itaque fuga at rem, nobis quos debitis quo veritatis vero, ea harum illum
+      recusandae dignissimos? Quia doloribus obcaecati nisi? Minus dignissimos
+      iure molestias recusandae sunt, laboriosam quo dolorum? Nostrum, dolore
+      quibusdam! Iusto debitis accusantium, deleniti, molestiae architecto
+      perspiciatis odio, cum cupiditate tempora provident cumque praesentium
+      unde consequuntur eos deserunt voluptatum reiciendis optio repellendus
+      corporis dignissimos aliquid. Iusto nostrum soluta facere aspernatur,
+      minus tempora blanditiis placeat. A quod nobis id debitis cum consequatur,
+      nisi quaerat! Laudantium ducimus officiis, accusamus autem nesciunt vero
+      rem sapiente impedit officia in magni illum possimus, molestias
+      reprehenderit eligendi? Suscipit, molestias. Unde laborum est eveniet
+      maiores ratione voluptatibus omnis, labore magni, quidem, incidunt
+      perspiciatis quo nam quaerat similique. Labore, voluptas magnam cum
+      tempore eius quibusdam vero id enim voluptatibus accusantium natus, illum
+      totam. Nam odio at delectus aut aliquid nulla molestiae cupiditate illum
+      ut sequi quasi nemo quo, dignissimos numquam tempore, assumenda
+      perferendis ullam sit non minima eius neque itaque. Obcaecati cupiditate
+      autem laudantium expedita distinctio quas eaque, delectus aliquam debitis
+      eum fuga reprehenderit aut, repellendus aspernatur esse. Rem possimus
+      neque labore laborum iusto tempore maxime. Odio ipsam amet quos esse omnis
+      voluptatibus veritatis doloribus, molestias blanditiis quod porro
+      similique neque laboriosam cupiditate ipsa ratione. Modi quas dolore
+      numquam itaque eum! Laudantium dolor nam vel reprehenderit magni
+      consequatur sint illo explicabo distinctio at? Nulla tempora accusamus
+      deserunt praesentium cumque dolores mollitia architecto qui iusto, ducimus
+      eum totam doloremque temporibus obcaecati consequatur. Id temporibus
+      eveniet nihil fugiat voluptates aspernatur officiis, natus non. Asperiores
+      debitis officiis dicta a temporibus quam numquam magnam amet beatae
+      commodi tempore veritatis, dolores, ab blanditiis aliquid veniam quod
+      iusto esse officia vero aspernatur cum minima inventore. Quidem ea neque
+      iste repudiandae odio. Odio quod nam debitis neque delectus sapiente aut.
+      Voluptatum quia reiciendis iusto quam culpa autem libero quasi veniam
+      dignissimos! Sequi!
+    </div>
   </body>
 </html>
