--- a/CSS/combinators.html
+++ b/CSS/combinators.html
@@ -122,7 +122,7 @@
         5.Adjacent Sibling
             immediately following sibling element we use plus (+) to demote adjacent sibling
 
-    Pseudclass:
+    Pseudoclass:
         :hover - mouse over
         :active - mouse click
 
