animation and tranformation

--- a/CSS/transformation.html
+++ b/CSS/transformation.html
@@ -74,7 +74,7 @@
         skew:change in shape
         */
         /* transform: skew(50deg, 50deg); */
-        /* animation-play-state: paused; */
+        animation-play-state: paused;
       }
     </style>
   </head>
