--- a/CSS/flex.html
+++ b/CSS/flex.html
@@ -82,6 +82,35 @@
         justify-content: center;
         align-items: center;
       }
+      @media screen and (max-width: 500px) {
+        .container {
+          flex-direction: column;
+          gap: 0;
+        }
+        .left_div {
+          width: 100%;
+          height: 20vh;
+        }
+        .right_div {
+          width: 100%;
+        }
+        .two {
+          height: 20vh;
+        }
+        .three {
+          height: auto;
+          /* width: 100%; */
+          flex-direction: column;
+        }
+        .another {
+          width: 100%;
+          height: 20vh;
+        }
+        .four {
+          width: 100%;
+          flex-direction: column;
+        }
+      }
     </style>
   </head>
 
