--- a/HTML and CSS project/index.html
+++ b/HTML and CSS project/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KEC Website Design</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <section class="header">
@@ -13,17 +20,14 @@
           ><img src="./images/kantipur.png" alt="" class="img"
         /></a>
         <div class="nav-links" id="navlinks">
-          <input type="checkbox" id="menu-toggle" />
-          <label for="menu-toggle" class="close-icon">&#x2715;</label>
           <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">COURSE</a></li>
-            <li><a href="">BLOG</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="./course.html">COURSE</a></li>
+            <li><a href="./blog.html">BLOG</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </div>
-        <label for="menu-toggle" class="menu-icon">&#9776;</label>
       </nav>
       <div class="textbox">
         <h1>Nepal's N0.1 College</h1>
@@ -36,5 +40,164 @@
         <a href="" class="btn">Visit US to Know More</a>
       </div>
     </section>
+
+    <!-- Course -->
+    <section class="course">
+      <h1>Courses we Offer</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ut hic
+        vero nostrum aliquid consectetur saepe autem amet obcaecati nemo?
+        Aliquid sint at consectetur non! Molestias deleniti error accusamus
+        obcaecati.
+      </p>
+      <div class="row">
+        <div class="course-col">
+          <h3>Computer Engineering</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae
+            tempora fugit id iste amet veniam natus voluptatibus placeat, libero
+            voluptates distinctio laudantium maxime obcaecati cum alias dolore
+            sed blanditiis labore.
+          </p>
+        </div>
+        <div class="course-col">
+          <h3>Civil Engineering</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae
+            tempora fugit id iste amet veniam natus voluptatibus placeat, libero
+            voluptates distinctio laudantium maxime obcaecati cum alias dolore
+            sed blanditiis labore.
+          </p>
+        </div>
+        <div class="course-col">
+          <h3>Electronics Engineering</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae
+            tempora fugit id iste amet veniam natus voluptatibus placeat, libero
+            voluptates distinctio laudantium maxime obcaecati cum alias dolore
+            sed blanditiis labore.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Facilities -->
+    <section class="facilities">
+      <h1>Our Facilities</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quos
+        quibusdam, dignissimos accusantium error nulla possimus! Ipsam tenetur
+        nesciunt porro.
+      </p>
+      <div class="row">
+        <div class="facilities-col">
+          <h3>Library</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            deserunt minus temporibus. Facilis cumque officia fuga. Aliquid
+            nobis deleniti neque quam, veniam ipsum perferendis voluptatum
+            excepturi soluta ipsam quae cupiditate!
+          </p>
+        </div>
+        <div class="facilities-col">
+          <h3>Lab</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            deserunt minus temporibus. Facilis cumque officia fuga. Aliquid
+            nobis deleniti neque quam, veniam ipsum perferendis voluptatum
+            excepturi soluta ipsam quae cupiditate!
+          </p>
+        </div>
+        <div class="facilities-col">
+          <h3>Sports</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            deserunt minus temporibus. Facilis cumque officia fuga. Aliquid
+            nobis deleniti neque quam, veniam ipsum perferendis voluptatum
+            excepturi soluta ipsam quae cupiditate!
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonials -->
+    <section class="test">
+      <h1>What Students Says</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro,
+        praesentium?
+      </p>
+      <div class="row">
+        <div class="test-col">
+          <img
+            src="./images/christopher-campbell-rDEOVtE7vOs-unsplash.jpg"
+            alt=""
+          />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam,
+              maxime.
+            </p>
+            <h3>Luffy</h3>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+        <div class="test-col">
+          <img src="./images/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" alt="" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam,
+              maxime.
+            </p>
+            <h3>Luffy</h3>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+        <div class="test-col">
+          <img src="./images/slav-romanov-BrEAp01_m5w-unsplash.jpg" alt="" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam,
+              maxime.
+            </p>
+            <h3>Luffy</h3>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star-half-stroke"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- CAll to Action -->
+    <section class="cta">
+      <h1>Enroll Our Courses</h1>
+      <a href="" class="btn">CONTACT-US</a>
+    </section>
+    <!-- Footer -->
+    <footer>
+      <h4>About Us</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus,
+        eaque a mollitia illum ratione <br />
+        eos fuga dolore ab ea amet totam debitis sint nam quibusdam! Nemo
+        accusamus aspernatur quae corporis.
+      </p>
+      <div class="icon">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
+
+      <p><i class="fa-regular fa-heart"></i></p>
+    </footer>
   </body>
 </html>
