--- a/HTML and CSS project/index.html
+++ b/HTML and CSS project/index.html
@@ -17,7 +17,7 @@
     <section class="header">
       <nav>
         <a href="index.html"
-          ><img src="./images/kantipur.png" alt="" class="img"
+          ><img src="./images/logo (1).png" alt="" class="img"
         /></a>
         <div class="nav-links" id="navlinks">
           <ul>
@@ -179,7 +179,7 @@
     <!-- CAll to Action -->
     <section class="cta">
       <h1>Enroll Our Courses</h1>
-      <a href="" class="btn">CONTACT-US</a>
+      <a href="./contact.html" class="btn">CONTACT-US</a>
     </section>
     <!-- Footer -->
     <footer>
