--- a/HTML and CSS project/about.html
+++ b/HTML and CSS project/about.html
@@ -17,7 +17,7 @@
     <section class="sub-header">
       <nav>
         <a href="index.html"
-          ><img src="./images/kantipur.png" alt="" class="img"
+          ><img src="./images/logo (1).png" alt="" class="img"
         /></a>
         <div class="nav-links" id="navlinks">
           <ul>
