--- a/Bootstrap/products.html
+++ b/Bootstrap/products.html
@@ -73,12 +73,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html">Products</a>
+              <a
+                class="nav-link active text-decoration-underline fw-bold"
+                href="./products.html"
+                >Products</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./services.html">Services</a>
@@ -120,6 +124,161 @@
     </nav>
     <!-- Header End -->
     <!-- main content start -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 pt-5 ps-3">
+          <h4>Deals</h4>
+          <ul class="list-unstyled ps-3">
+            <li>
+              <a href="#" class="text-decoration-none fw-bold text-success"
+                >TOP DEALS</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none fw-bold text-danger"
+                >FLASH SALE</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none fw-bold text-info"
+                >MOST POPULAR</a
+              >
+            </li>
+          </ul>
+          <h4>Categories</h4>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault1"
+            />
+            <label class="form-check-label" for="flexCheckDefault1">
+              PIZZA
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault2"
+            />
+            <label class="form-check-label" for="flexCheckDefault2">
+              BURGER
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault3"
+            />
+            <label class="form-check-label" for="flexCheckDefault3">
+              BIRYANI
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault4"
+            />
+            <label class="form-check-label" for="flexCheckDefault4">
+              MOMO
+            </label>
+          </div>
+
+          <h4>Prices</h4>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault1"
+            />
+            <label class="form-check-label" for="flexRadioDefault1">
+              ALL
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault2"
+            />
+            <label class="form-check-label" for="flexRadioDefault2">
+              Rs.300-600
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault3"
+            />
+            <label class="form-check-label" for="flexRadioDefault3">
+              Rs.600-1000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault4"
+            />
+            <label class="form-check-label" for="flexRadioDefault4">
+              Rs.1000-1200
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault5"
+            />
+            <label class="form-check-label" for="flexRadioDefault5">
+              Above Rs.1200
+            </label>
+          </div>
+          <h4>Avg. Customer Review</h4>
+          <ul class="list-unstyled">
+            <li>
+              <i class="bi bi-star"></i><i class="bi bi-star"></i
+              ><i class="bi bi-star"></i><i class="bi bi-star"></i>
+              <i class="bi bi-star-fill"></i>
+            </li>
+            <li>
+              <i class="bi bi-star"></i><i class="bi bi-star"></i
+              ><i class="bi bi-star"></i> <i class="bi bi-star-fill"></i
+              ><i class="bi bi-star-fill"></i>
+            </li>
+            <li>
+              <i class="bi bi-star"></i><i class="bi bi-star"></i>
+              <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+              ><i class="bi bi-star-fill"></i>
+            </li>
+            <li>
+              <i class="bi bi-star"></i>
+              <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+              ><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+            </li>
+            <li>
+              <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+              ><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+              ><i class="bi bi-star-fill"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-9">Products</div>
+      </div>
+    </div>
     <!-- main content end -->
     <!-- Footer start -->
     <div class="container-fluid">
