--- a/Bootstrap/contact.html
+++ b/Bootstrap/contact.html
@@ -73,7 +73,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
@@ -90,7 +90,11 @@
               <a class="nav-link" href="./blogs.html">Blogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
+              <a
+                class="nav-link active text-decoration-underline fw-bold"
+                href="./contact.html"
+                >Contact</a
+              >
             </li>
             <!-- <li class="nav-item dropdown">
               <a
@@ -120,6 +124,40 @@
     </nav>
     <!-- Header End -->
     <!-- main content start -->
+
+    <div class="container">
+      <div class="row p-5 rounded-5 overflow-hidden">
+        <div class="col-md-6 p-5 bg-danger-subtle rounded-start-5">
+          <h3>Our Store</h3>
+          <h4>Lagankhel, Lalitpur</h4>
+          <h4>Phone: 9845678903</h4>
+          <h4>Email: fdhf@gmail.com</h4>
+          <h4>Website: www.ourstore.com</h4>
+        </div>
+        <div class="col-md-6 p-5 bg-success-subtle rounded-end-5">
+          <label for="email">Email</label>
+          <input type="email" required class="form-control" />
+          <label for="subject">Subject</label>
+          <input type="text" required class="form-control" />
+          <label for="msg">Message</label>
+          <textarea name="" id="msg" class="form-control"></textarea>
+          <button class="btn btn-success form-control mt-2">Submit</button>
+        </div>
+      </div>
+      <div class="rounded-4 bg-secondary-subtle p-2">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56536.27288990325!2d85.29311501923773!3d27.670409854156457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19000a4f32cf%3A0x53f71813950137ff!2sEvolve%20IT%20Hub%20Nepal!5e0!3m2!1sen!2snp!4v1719485040798!5m2!1sen!2snp"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="w-100 rounded-4"
+        ></iframe>
+      </div>
+    </div>
+
     <!-- main content end -->
     <!-- Footer start -->
     <div class="container-fluid">
