--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -73,7 +73,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a
+                class="nav-link active text-decoration-underline fw-bold"
+                aria-current="page"
+                href="./index.html"
                 >Home</a
               >
             </li>
