--- a/Bootstrap/services.html
+++ b/Bootstrap/services.html
@@ -73,7 +73,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
@@ -81,7 +81,11 @@
               <a class="nav-link" href="./products.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./services.html">Services</a>
+              <a
+                class="nav-link active text-decoration-underline fw-bold"
+                href="./services.html"
+                >Services</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
