--- a/Bootstrap/products.html
+++ b/Bootstrap/products.html
@@ -276,7 +276,80 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-9">Products</div>
+        <div class="col-md-9 p-5">
+          <div
+            class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-4"
+          >
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/products/bg1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">MEAT</h5>
+                  <p class="card-text">Rs.500</p>
+                  <div class="d-flex justify-content-between">
+                    <button class="btn btn-warning">Add to Cart</button>
+                    <button class="btn btn-success">Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/products/bg2.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">SEKUWA</h5>
+                  <p class="card-text">Rs.450</p>
+                  <div class="d-flex justify-content-between">
+                    <button class="btn btn-warning">Add to Cart</button>
+                    <button class="btn btn-success">Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/products/bg3.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">PLATTER</h5>
+                  <p class="card-text">Rs.1000</p>
+                  <div class="d-flex justify-content-between">
+                    <button class="btn btn-warning">Add to Cart</button>
+                    <button class="btn btn-success">Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/products/healthy.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">FRUITS</h5>
+                  <p class="card-text">Rs.500</p>
+                  <div class="d-flex justify-content-between">
+                    <button class="btn btn-warning">Add to Cart</button>
+                    <button class="btn btn-success">Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- main content end -->
