--- a/JavaScript/ImageSlider/main.html
+++ b/JavaScript/ImageSlider/main.html
@@ -34,7 +34,7 @@
   </style>
   <body>
     <div class="container">
-      <img src="./dice-six-faces-two.png" alt="" />
+      <img src="./1.jpg" alt="" />
       <button class="left">&lt;</button>
       <button class="right">&gt;</button>
     </div>
