--- a/JavaScript/ImageSlider/main.html
+++ b/JavaScript/ImageSlider/main.html
@@ -34,9 +34,10 @@
   </style>
   <body>
     <div class="container">
-      <img src="./1.jpg" alt="" />
-      <button class="left">&lt;</button>
-      <button class="right">&gt;</button>
+      <img src="" alt="" id="slider" />
+      <button class="left" id="left">&lt;</button>
+      <button class="right" id="right">&gt;</button>
     </div>
+    <script src="./imageSlider.js"></script>
   </body>
 </html>
